# cpp-in-a-week

./: .gitignore  CMakeLists.txt  README.md  gtest.cmake  main  setup-zsh.sh
.devcontainer/: Dockerfile
cmake/: boost.cmake
src/: CMakeLists.txt
src/basics/: CMakeLists.txt
src/basics/constructor/: CMakeLists.txt  Employee.cpp  Employee.h
src/basics/constructor/test/: CMakeLists.txt  test_employee.cpp
src/basics/deducing-types/: CMakeLists.txt  decltype.cpp
src/basics/using_const/: CMakeLists.txt  TextBlock.cpp  TextBlock.h
src/basics/using_const/test/: CMakeLists.txt  test_textblock.cpp
src/lib/: CMakeLists.txt  const_pointer.cpp  const_pointer.h
src/lib/test/: CMakeLists.txt  test_const_pointer.cpp
src/main/: main.cpp
src/main/lib/: const_pointer.cpp  const_pointer.h
src/test/: test_const_pointer.cpp
